# rust_from_python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/rupy/: __init__.py  main.py
