[project]
name = "rupy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justica", email = "atsuronreplaced@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "maturin>=1.8.6",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "heavy_functions"
